--- a/Final_AED_Project/nbproject/private/private.properties
+++ b/Final_AED_Project/nbproject/private/private.properties
@@ -1,1 +1,8 @@
-user.properties.file=C:\\Users\\pushk\\AppData\\Roaming\\NetBeans\\15\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\SARVESH SAWANT\\AppData\\Roaming\\NetBeans\\16\\build.properties
